Sync all content

--- a/content/resources/19.md
+++ b/content/resources/19.md
@@ -7,6 +7,7 @@ image_metadata:
   caption: ''
   credit: ''
   image-alt: ''
+parent_uid: 01ed4036-4971-1d69-1f8b-5f33e31948a5
 resourcetype: Image
 title: 19.png
 uid: b6c3384e-7ac6-95fa-335c-b1e9e9c76c2b
