--- a/content/resources/26.md
+++ b/content/resources/26.md
@@ -7,6 +7,7 @@ image_metadata:
   caption: ''
   credit: ''
   image-alt: ''
+parent_uid: 01ed4036-4971-1d69-1f8b-5f33e31948a5
 resourcetype: Image
 title: 26.png
 uid: 4fbf9e2c-ee59-2782-21b9-bf48b8dc9345
